<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>chusnaval.org</groupId>
  <artifactId>lugus</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Lugus</name>
  <description>Guardar mi filmoteca.</description>

    <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.12</version>
    <relativePath/>
    </parent>

    <properties>
    <java.version>21</java.version>
    <spring-framework.version>6.2.16</spring-framework.version>
    <lombok.version>1.18.36</lombok.version>
    <active.profile>dev</active.profile>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
    <module>lugus-domain</module>
    <module>lugus-application</module>
    <module>lugus-infrastructure</module>
    <module>lugus-bootstrap</module>
    </modules>

    <profiles>

    <!-- Development profile -->
    <profile>
      <id>dev</id>
      <activation>
        <property>
          <name>env</name>
          <value>dev</value>
        </property>
      </activation>
      <properties>
        <active.profile>dev</active.profile>
      </properties>
    </profile>

    <!-- Production profile -->
    <profile>
      <id>prod</id>
      <activation>
        <property>
          <name>env</name>
          <value>prod</value>
        </property>
      </activation>
      <properties>
        <active.profile>prod</active.profile>
      </properties>
    </profile>

  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <configuration>
            <encoding>UTF-8</encoding>
            <useDefaultDelimiters>true</useDefaultDelimiters>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>